2004-11-23  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/Makefile.am, src/libcommon/m_msg.c,
	  src/libcommon/m_msg.h, src/libcommon/msg.c, src/libcommon/msg.h,
	  src/libmunge/Makefile.am, src/libmunge/m_msg_client.c,
	  src/libmunge/m_msg_client.h, src/libmunge/msg_client.c,
	  src/libmunge/msg_client.h:
	  Renamed src/libcommon/msg.[ch] to m_msg.[ch].
	  Renamed src/libmunge/msg_client.[ch] to m_msg_client.[ch].
	  Changed "msg_" prefix to "m_msg_".  All callers changed.
	  Fixed "previous declaration of `msg_t'" error under AIX.

	* src/libmunge/Makefile.am:
	  Added -export-symbols-regex to libmunge.

	* src/libcommon/Makefile.am, src/libcommon/msg.c, src/libcommon/msg.h,
	  src/libcommon/munge_msg.c, src/libcommon/munge_msg.h:
	  Renamed src/libcommon/munge_msg.[ch] to msg.[ch].
	  Removed "munge_" prefix on all "munge_msg_*" functions.
	  All callers changed.
	* src/libmunge/ctx.c, src/libmunge/ctx.h:
	  Removed unnecessary include for munge_msg.h.

2004-11-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/enum.c:
	  Fixed compiler warning regarding assignment of read-only variable.

	* META, config/x_ac_meta.m4, src/libmunge/Makefile.am:
	  Added LT_Current, LT_Revision, and LT_Age for libtool -version-info.

	* README, munge.spec: Updated verbage.
	* src/libcommon/munge.7.in, src/libmunge/munge.3.in,
	  src/libmunge/munge_ctx.3.in, src/munge/munge.1.in,
	  src/munge/remunge.1.in, src/munge/unmunge.1.in,
	  src/munged/munged.8.in: Updated verbage.
	* src/libmunge/munge.h: Sync'd with manpages.

2004-11-17  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge.h:
	  Removed MUNGE_OPT_LAST_ENTRY, MUNGE_CIPHER_LAST_ENTRY,
	  MUNGE_MAC_LAST_ENTRY, MUNGE_ZIP_LAST_ENTRY, EMUNGE_LAST_ENTRY.
	* src/munged/zip.c: Removed use of MUNGE_ZIP_LAST_ENTRY.

	* src/libcommon/munge_msg.h: Removed MUNGE_MSG_LAST_ENTRY.

	* configure.ac, src/libcommon/munge.7.in, src/libmunge/munge.3.in,
	  src/libmunge/munge_ctx.3.in, src/libmunge/munge_enum.3.in,